--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
   tools:context="io.github.kafumi.dangerktlintsample.MainActivity">
 
   <TextView
+    android:id="@+id/timeText"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:text="Hello Ktlint!"/>
+    android:layout_gravity="center"/>
 
 </FrameLayout>
